<resources>
    <string name="app_name" translatable="false">AarhWeatherAPP_Group_14</string>

    <string-array name="country_codes">
        <item>es</item>
        <item>dk</item>
        <item>ad</item>
        <item>af</item>
        <item>an</item>
        <item>aq</item>
        <item>ar</item>
        <item>be</item>
        <item>br</item>
        <item>ca</item>
        <item>ch</item>
        <item>de</item>
        <item>fi</item>
        <item>fr</item>
        <item>hk</item>
        <item>ie</item>
        <item>it</item>
        <item>jp</item>
        <item>kr</item>
        <item>lu</item>
        <item>mx</item>
        <item>nl</item>
        <item>no</item>
        <item>pl</item>
        <item>uk</item>
        <item>us</item>
    </string-array>
    <string name="title_activity_about">H4_Group_14</string>
    <string name="temp_max">Temp max:</string>
    <string name="temp_min" translatable="false">Temp min:</string>
    <string name="temp">Temperature: </string>
    <string name="Celsius">Celsius</string>
    <string name="Fahrenheit" translatable="false">Fahrenheit</string>
    <string name="city">Enter city</string>
    <string name="weather">Submit</string>
    <string name="windspeed">Wind speed: </string>
    <string name="pressure">Pressure: </string>
    <string name="humidity">Humidity: </string>
    <string name="about_text">This application was made by group 14. \n\nIt asks for a city name to get the weather as well as the country from which the city is. After that you can click the Submit button and it will send a message to the service \nThis service will make an http request every 5 minutes and will send the data back to the activity and the activity will display the results.</string>
    <string name="action_about">About</string>
    <string name="title_activity_weather" translatable="false">H4_Group_14</string>
    <string name="title_activity_main" translatable="false">H4_Group_14</string>

    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="details">More details</string>
    <string name="city_d">City: </string>
    <string name="country_d">Country code: </string>
    <string name="temp_min_d">Temperature min: </string>
    <string name="temp_max_d">Temperature max: </string>
</resources>
