<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.iha.group14.h4_group_14.Weather"
    android:background="@android:color/darker_gray"
    android:id="@+id/layout">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/city_Detail"
        android:text="@string/city_d"
        android:textColor="#FFFF"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/city"
        android:textColor="#FFFF"
        android:textSize="20sp"
        android:typeface="serif"
        android:textStyle="normal"
        android:layout_marginTop="25dp"
        android:layout_toRightOf="@+id/city_Detail" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/country_Detail"
        android:text="@string/country_d"
        android:textColor="#FFFF"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/city_Detail" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/country"
        android:textColor="#FFFF"
        android:textSize="20sp"
        android:typeface="serif"
        android:textStyle="normal"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/city"
        android:layout_toRightOf="@+id/country_Detail" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/temp_Detail"
        android:text="@string/temp"
        android:textColor="#FFFF"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/country_Detail" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/temp2"
        android:textColor="#FFFF"
        android:textSize="20sp"
        android:typeface="serif"
        android:textStyle="normal"
        android:layout_toRightOf="@+id/temp_Detail"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/country" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/temp_Detail2"
        android:text="@string/temp_min_d"
        android:textColor="#FFFF"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_below="@+id/temp_Detail"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/temp_min2"
        android:textColor="#FFFF"
        android:textSize="20sp"
        android:layout_toRightOf="@+id/temp_Detail2"
        android:layout_below="@+id/temp2"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/temp_Detail3"
        android:text="@string/temp_max_d"
        android:textColor="#FFFF"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_below="@+id/temp_Detail2"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/temp_max2"
        android:textColor="#FFFF"
        android:textSize="20sp"
        android:layout_toRightOf="@+id/temp_Detail3"
        android:layout_below="@+id/temp_min2"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/wind_Detail"
        android:text="@string/windspeed"
        android:textColor="#FFFF"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_below="@+id/temp_Detail3"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/wind"
        android:textColor="#FFFF"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:layout_toRightOf="@+id/wind_Detail"
        android:layout_below="@+id/temp_Detail3"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/press_Detail"
        android:text="@string/pressure"
        android:textColor="#FFFF"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_below="@+id/wind_Detail"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pressure"
        android:textColor="#FFFF"
        android:textSize="20sp"
        android:layout_toRightOf="@+id/press_Detail"
        android:layout_below="@+id/wind"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/humit_Detail"
        android:text="@string/humidity"
        android:textColor="#FFFF"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_alignParentTop="false"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false"
        android:layout_below="@+id/press_Detail"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/humidity"
        android:textColor="#FFFF"
        android:textSize="20sp"
        android:layout_toRightOf="@+id/humit_Detail"
        android:layout_below="@+id/pressure"
        android:layout_marginTop="10dp" />


</RelativeLayout>
